sm7325-common: Add the customized max cached processes number
Bug: 190531672
Test: make
Test: dumpsys activity | grep CUR_MAX_CACHED_PROCESSES
Change-Id: Iad6ea04fe2cc7223168d2753e53949394056540a
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1351,4 +1351,7 @@
 
     <!-- Auto-brightness sensor type string -->
     <string name="config_displayLightSensorType">"android.sensor.light"</string>
+
+    <!-- the number of the max cached processes in the system. -->
+    <integer name="config_customizedMaxCachedProcesses">64</integer>
 </resources>
