sm7325-common: overlay: Configure default light sensor type
Fixes adaptive brightness after r35 merge

Change-Id: I9b7dcfbc3f2418699fc3846b9cd82dbdd9065168

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1333,4 +1333,7 @@
 
     <!-- Default refresh rate while the device has high brightness mode enabled for HDR. -->
     <integer name="config_defaultRefreshRateInHbmHdr">60</integer>
+
+    <!-- Auto-brightness sensor type string -->
+    <string name="config_displayLightSensorType">"android.sensor.light"</string>
 </resources>
